--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="price_hint">Price (numbers_only)</string>
     <string name="price_hints">Price (numbers only)</string>
     <string name="description_hint">Description</string>
+    <string name="save_menu">save</string>
 </resources>
