--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Travelmantics</string>
     <string name="title_hint">Deal Title</string>
-    <string name="price_hint">Price (numbers_only)</string>
-    <string name="price_hints">Price (numbers only)</string>
+    <string name="price_hint">Price (numbers only)</string>
     <string name="description_hint">Description</string>
     <string name="save_menu">save</string>
 </resources>
